--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.542.0",
     "next": "15.5.9",
-    "postmark": "^4.0.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
-    "zod": "^4.1.4"
+    "zod": "^4.1.4",
+    "resend": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
